<resources>
    <string name="app_name">andorid_toss_clone</string>
    <string name="home">홈</string>
    <string name="consumption">내 소비</string>
    <string name="all">전체</string>
    <string name="recommendation">추천</string>

    <string name="welcome_title">금융의 모든 것\n토스에서 간편하게</string>
    <string name="welcome_toss_is_safe">토스는 안전합니다.</string>
    <string name="welcome_boast">다운로드 %s, 누적 보안 사고 %s</string>
    <string name="to_start">시작하기</string>
    <string name="to_continue">계속하기</string>
    <string name="privacy_mode_working">개인 정보 보호 모드 작동 중</string>
    <string name="permission_please">앱 사용을 위해 권한을 허용해주세요\n꼭 필요한 권한만 받아요</string>
    <string name="call">전화</string>
    <string name="permission_call_description">휴대폰 번호로 본인 인증을 합니다.</string>
    <string name="address_book">주소록</string>
    <string name="permission_address_book_description">등록된 사진을 불러오고 수수료 무료로 송금,\n친구 초대 혜택을 받을 수 있습니다.\n이를 위해 주소록 정보를 토스 서버에 보냅니다.</string>
    <string name="storage">저장공간</string>
    <string name="permission_storage_description">공인인증서로 로그인하고,\n입금 확인증이나 QR코드를 저장합니다.</string>
    <string name="please_allow_access">접근 권한을 허용해주세요</string>
    <string name="please_allow_access_making_and_managing_calls">안전한 기기 인증을 위해서 \'전화 걸기 및 관리\'\n접근 권한이 필요합니다.</string>
    <string name="please_allow_access_read_contacts">간편 송금을 위해서 \'주소록\'접근 권한이 필요합니다.</string>
    <string name="please_allow_access_storage">간편 송금을 위해서 \'저장공간\'접근 권한이 필요합니다.</string>
    <string name="ok">확인</string>
    <string name="no">취소</string>

    <string name="name">이름</string>
    <string name="please_input_name">이름을 입력해주세요.</string>
    <string name="phone_number">휴대폰번호</string>
    <string name="please_input_phone_number">휴대폰번호을 입력해주세요</string>
    <string name="social_security_number">주민등록번호</string>
    <string name="please_input_social_security_number">주민등록번호를 입력해주세요</string>
    <string name="news_agency">통신사</string>
    <string name="please_input_news_agency">통신사를 입력해주세요</string>
    <string name="please_push_ok">확인 버튼을 눌러주세요</string>

    <!--특수문자-->
    <string name="hyphen">—</string>
    <string name="circle">●</string>
    <string name="title">제목</string>


</resources>