<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_permission_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/tv_permission_please"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/permission_please"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_permission_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_please"
        app:srcCompat="@drawable/permission_call"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/PermissionTitle"
        android:id="@+id/tv_permission_call_title"
        android:layout_marginStart="16dp"
        android:text="@string/call"
        app:layout_constraintStart_toEndOf="@+id/iv_permission_call"
        app:layout_constraintTop_toTopOf="@+id/iv_permission_call" />

    <TextView
        android:id="@+id/tv_permission_call_description"
        style="@style/PermissionDescription"
        android:layout_marginTop="8dp"
        android:text="@string/permission_call_description"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_call_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_call_title" />


    <ImageView
        android:id="@+id/iv_address_book_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_call_description"
        app:srcCompat="@drawable/permission_call_list"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/PermissionTitle"
        android:id="@+id/tv_permission_address_book_title"
        android:layout_marginStart="16dp"
        android:text="@string/address_book"
        app:layout_constraintStart_toEndOf="@+id/iv_address_book_call"
        app:layout_constraintTop_toTopOf="@+id/iv_address_book_call" />

    <TextView
        android:id="@+id/tv_permission_address_book_description"
        style="@style/PermissionDescription"
        android:layout_marginTop="8dp"
        android:text="@string/permission_address_book_description"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_address_book_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_address_book_title" />


    <ImageView
        android:id="@+id/iv_storage_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_address_book_description"
        app:srcCompat="@drawable/permission_diractory"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/PermissionTitle"
        android:id="@+id/tv_permission_storage_title"
        android:layout_marginStart="16dp"
        android:text="@string/storage"
        app:layout_constraintStart_toEndOf="@+id/iv_storage_call"
        app:layout_constraintTop_toTopOf="@+id/iv_storage_call" />

    <TextView
        android:id="@+id/tv_permission_storage_description"
        style="@style/PermissionDescription"
        android:layout_marginTop="8dp"
        android:text="@string/permission_storage_description"
        app:layout_constraintStart_toStartOf="@+id/tv_permission_storage_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_storage_title" />

</androidx.constraintlayout.widget.ConstraintLayout>